# morseplayer-

./: LICENSE  README.md  pyproject.toml
morseplayer/: __init__.py  cli.py  core.py  morse_table.py
